hphp/test/zend/good/ext-spl/spl_002.php
<?php

class Test implements Countable
{
	function count()
	{
		return 4;
	}
};

$a = new Test;

var_dump(count($a));

?>
===DONE===